src/tests/fixtures/default_values/DefaultArgumentObjectLiteralSpread.invalid.ts.expected
-----------------
INPUT
----------------- 
import { Int } from "../../../Types";

const defaultArgs = { first: 10, offset: 10 };

/** @gqlType */
export default class Query {
  /** @gqlField */
  someField1({
    input = { ...defaultArgs },
  }: {
    input?: ConnectionInput | null;
  }): string {
    return "hello";
  }
}

/** @gqlInput */
type ConnectionInput = {
  first: Int;
  offset: Int;
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/default_values/DefaultArgumentObjectLiteralSpread.invalid.ts:9:15 - error: Expected object literal property to be a property assignment.

If you think Grats should be able to infer this constant value, please report an issue at https://github.com/captbaritone/grats/issues.

9     input = { ...defaultArgs },
                ~~~~~~~~~~~~~~
